contact us html and php change
contact php might can use on it now (last step still not done yet.

--- a/contact.html
+++ b/contact.html
@@ -87,51 +87,12 @@
 			</div>
 		</header>
 		<!-- Header Close -->
-		<div class="banner">
-			<div class="owl-four owl-carousel">
-				<img src="images/page-banner.jpg" alt="Image of Bannner">
-				<img src="images/page-banner2.jpg" alt="Image of Bannner">
-				<img src="images/page-banner3.jpg" alt="Image of Bannner">
-			</div>
-			<div class="container">
-				<h1>welcome to education pro</h1>
-				<h3>With our advance search feature you can now find the trips for you...</h3>
-			</div>
-			 <div id="owl-four-nav" class="owl-nav"></div>
-		</div>
-		<!-- <div class="banner">
-			<div class="owl-five owl-carousel owl-theme">
-	            <div class="item-video">
-            		<iframe width="100%" height="450" src="https://www.youtube.com/embed/ENVW3uZ3a-4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-            		</iframe>
-	            </div>
-	            <div class="item-video">
-	            	<iframe width="100%" height="450" src="https://www.youtube.com/embed/0bfk90rWV9U" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-	            </div>
-	            <div class="item-video">
-	            	<iframe width="100%" height="450" src="https://www.youtube.com/embed/ktvTqknDobU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-	            </div>
-	            <div class="item-video">
-            		<iframe width="100%" height="450" src="https://www.youtube.com/embed/ENVW3uZ3a-4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-            		</iframe>
-	            </div>
-	            <div class="item-video">
-	            	<iframe width="100%" height="450" src="https://www.youtube.com/embed/0bfk90rWV9U" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-	            </div>
-	            <div class="item-video">
-	            	<iframe width="100%" height="450" src="https://www.youtube.com/embed/ktvTqknDobU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-	            </div>
-          </div>
-		</div> -->
+		
 		<section class="contact-page-section">
 			<div class="container">
 				<div class="people-info-wrap">
 					<h2>leave us your info</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur.</p>
+					<p>Send the problem that you have face or give us the command that you need to tell us.</p>
 					<form>
 						<span>
 						<input type="text" placeholder="Full Name*" class="input- name">
@@ -150,19 +111,18 @@
 					<ul class="contact-list">
 						<li><i class="fas fa-location-arrow"></i> 
 							<span>
-								<p>Gongabu, Kathmandu, Nepal</p>
-							    <p>(Opposite to Aatmagyan Prachar sangh)</p>
+								<p>George Town, Pulau Penang</p>
 							</span>
 						</li>
 						<li><i class="fas fa-phone"></i>
 							<span> 
-								<p>Phone: 016204888, Mobile: 9813639131</p>
-								<p>Fax:7838478387</p>
+								<p>Phone: 0123456789, Mobile: 987654321</p>
+								<p>Fax:123789456</p>
 							</span>
 						</li>
 						<li><i class="fas fa-envelope"></i>
 							<span>
-								<p>info@labtheme.com</p>
+								<p>xxxinfoxxx@labtheme.com</p>
 							</span>
 						</li>
 					</ul>
@@ -179,75 +139,17 @@
 			</div>
 		</section>
 
-		<section class="map-section">
-			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3531.5733087899557!2d85.31323458697706!3d27.730457718152763!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39eb1920ba20a0d5%3A0x3ea7459e8ab1371f!2sSpyders+Lab!5e0!3m2!1sen!2snp!4v1547705422844" width="100%" height="500" frameborder="0" style="border:0" allowfullscreen></iframe>
-		</section>
 
 		<section class="query-section">
 			<div class="container">
-				<p>Any Queries? Ask us a question at<a href="tel:+9779813639131"><i class="fas fa-phone"></i> +977 9813639131</a></p>
+				<p>Any Question? Ask us a question at<a href="tel:+0123456789"><i class="fas fa-phone"></i> +60123456789</a></p>
 			</div>
 		</section>
 		<!-- End of Query Section -->
-		<footer class="page-footer">
-			<div class="footer-first-section">
+		<footer class="page-footer" itemprop="footer" itemscope itemtype="http://schema.org/WPFooter">
+			<div class="footer-last-section">
 				<div class="container">
-					<div class="box-wrap">
-						<header>
-							<h1>about</h1>
-						</header>
-						<p>Edugate is a great start for and education. Personnel or oganization to start the online business with 1 click</p>
-
-						<h4><a href="tel:+9779813639131"><i class="fas fa-phone"></i> +977 9813639131</a></h4>
-						<h4><a href="mailto:info@educationpro.com"><i class="fas fa-envelope"></i> info@educationpro.com</a></h4>
-						<h4><i class="fas fa-map-marker-alt"></i>Gongabu, Kathmandu, Nepal</h4>
-					</div>
-
-					<div class="box-wrap">
-						<header>
-							<h1>links</h1>
-						</header>
-						<ul>
-							<li><a href="#">Teacher</a></li>
-							<li><a href="#">Courses</a></li>
-							<li><a href="#">Courses</a></li>
-							<li><a href="#">Courses</a></li>
-							<li><a href="#">Courses</a></li>
-							<li><a href="#">Courses</a></li>
-						</ul>
-					</div>
-
-					<div class="box-wrap">
-						<header>
-							<h1>recent courses</h1>
-						</header>
-						<div class="recent-course-wrap">
-							<img src="images/ui-ux.jpg" alt="Ui/Ux Designing">
-							<a href=""><div class="course-name">
-								<h3>UI/UX Designer courses</h3>
-								<p><span>$50</span> $40</p>
-							</div></a>
-						</div>
-						<div class="recent-course-wrap">
-							<img src="images/ui-ux.jpg" alt="Ui/Ux Designing">
-							<a href=""><div class="course-name">
-								<h3>UI/UX Designer courses</h3>
-								<p><span>$50</span> $40</p>
-							</div></a>
-						</div>
-					</div>
-
-					<div class="box-wrap">
-						<header>
-							<h1>quick contact</h1>
-						</header>
-						<section class="quick-contact">
-							<input type="email" name="email" placeholder="Your Email*">
-							<textarea placeholder="Type your message*"></textarea>
-							<button>send message</button>
-						</section>
-					</div>
-
+                <p>Any Queries? Ask us a question at <a href="tel:+9779813639131"><i class="fas fa-phone"></i> +977 9813639131</a></p>
 				</div>
 			</div>
 			<!-- End of box-Wrap -->
